--- a/views/rosteredit.ejs
+++ b/views/rosteredit.ejs
@@ -55,7 +55,7 @@
         <%});%>
         <div class="horizontalchildren">
             <input type="checkbox" checked="checked" class="invisible"
-                name="howManyStuds" value="<%=numChangedStuds%>" />
+                name="numAddedStuds" value="<%=numChangedStuds%>" />
             <button type="submit" name="requestType" value="<%=requestType%>">
                 Done
             </button>
